--- a/src/app/pages/camera/camera.page.html
+++ b/src/app/pages/camera/camera.page.html
@@ -1,6 +1,7 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>camera</ion-title>
+  <ion-toolbar color="secondary"><!--set the style -->
+    <ion-title>Camera</ion-title>
+   
   </ion-toolbar>
 </ion-header>
 
