--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -16,5 +16,12 @@
       <ion-icon name="sad-sharp"></ion-icon><!--change icon-->
       <ion-label>Deaths</ion-label>
     </ion-tab-button>
+
+ <ion-tab-button tab="camera">
+      <ion-icon name="camera"></ion-icon><!--change icon-->
+      <ion-label>Camera</ion-label>
+    </ion-tab-button>
+
+
   </ion-tab-bar>
 </ion-tabs>
