--- a/src/app/pages/camera/camera.page.html
+++ b/src/app/pages/camera/camera.page.html
@@ -4,7 +4,12 @@
    
   </ion-toolbar>
 </ion-header>
-
 <ion-content>
+  <img [src]="photo" >
 
+  <ion-fab vertical="bottom" horizontal="center" slot="fixed">
+    <ion-fab-button (click)="takePicture()">
+      <ion-icon name="camera"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
 </ion-content>
